Added second table to table practice page.

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -26,5 +26,20 @@
       <td>NASA astronaut, first African-American woman in space.</td>
     </tr>
   </table>
+  <table border="1">
+    <tr>
+      <th>Cool Stuff</th>
+      <th>Other Cool Stuff</th>
+      <th>Pickles</th>
+    </tr>
+    <tr>
+      <td colspan="2">CATS</td>
+      <td rowspan="2">gooseberries</td>
+    </tr>
+    <tr>
+      <td>marmalade</td>
+      <td>mushrooms</td>
+    </tr>
+  </table>
 </body>
 </html>
