--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,8 +1,8 @@
 <!--
 Write your names here:
-1.
-2.
-We spent [#] hours on this challenge.
+1. Devin Miller
+2. John Simoni
+We spent 1 hours on this challenge.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
@@ -276,6 +276,6 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!-- Having this challenge as a review of positioning was helpful; I feel like I understand the use of display and vertical-align to create columns better. Previously I've only used float to position. I already understood the way margin/border/padding work, but it's good to practice further. -->
   </body>
 </html>
